# Django_JL01

./: .gitignore  LICENSE  README.md
.github/workflows/: django.yml
Django_first/: .coverage  README.md  djangotest.py
Django_first/.github/workflows/: django.yaml
Django_first/accounts/: views.py
Django_first/django_polls/: MANIFEST.in  README.rst  apps.py  pyproject.toml
Django_first/django_polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
Django_first/mysite/: settings.py  urls.py
Django_first/polls/: admin.py  index.css  models.py  tests.py  urls.py  views.py
Django_first/polls/static/css/: index.css
Django_first/polls/templates/: contact_form.html
Django_first/polls/templates/polls/: base.html  detail.html  footer.html  header.html  index.html  question_form.html  question_form_delete.html
Django_first/static/polls/css/: index.css
Django_first/templates/accounts/: signup.html
Django_first/templates/polls/: base.html  detail.html  head.html  header.html  index.html  question.html  question_form_delete.html
Django_first/templates/registration/: login.html
