[build-system]
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-polls"
version = "0.1"
dependencies = ["django>=5.0"]
description = "A Django app to conduct web-based polls."
readme = "README.rst"
requires-python = ">= 3.10"
authors = [{name = "Your Name", email = "you@example.com"}]
classifiers = [
    "Framework :: Django",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10"
]

[project.urls]
Homepage = "https://example.com/"